add proto macet app

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -1,3 +1,6 @@
 @import "compass";
 @import "vendor/constans";
 @import "vendor/body";
+@import "vendor/header";
+@import "vendor/content";
+@import "vendor/footer";
