--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -3,6 +3,6 @@
 @import "vendor/body";
 @import "vendor/header";
 @import "vendor/content";
-@import "vendor/sign-in";
+@import "vendor/form-custom";
 @import "vendor/sign-up";
 @import "vendor/footer";
