--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -4,4 +4,5 @@
 @import "vendor/header";
 @import "vendor/content";
 @import "vendor/form-custom";
+@import "vendor/data";
 @import "vendor/footer";
