add walrus icon

--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -2,6 +2,7 @@
 @import "vendor/constans";
 @import "vendor/body";
 @import "vendor/header";
+@import "vendor/menu-user";
 @import "vendor/content";
 @import "vendor/form-custom";
 @import "vendor/data";
