--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -4,6 +4,7 @@
 @import "vendor/body";
 @import "vendor/header";
 @import "vendor/menu-user";
+@import "vendor/test.scss";
 @import "vendor/content";
 @import "vendor/form-custom";
 @import "vendor/data";
