add bottom menu

--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -3,8 +3,9 @@
 @import "vendor/constans";
 @import "vendor/body";
 @import "vendor/header";
+@import "vendor/menu-bottom";
 @import "vendor/menu-user";
-@import "vendor/test.scss";
+@import "vendor/test";
 @import "vendor/content";
 @import "vendor/form-custom";
 @import "vendor/data";
