--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -5,6 +5,7 @@
 @import "vendor/header";
 @import "vendor/menu-bottom";
 @import "vendor/menu-user";
+@import "vendor/menu-link";
 @import "vendor/test";
 @import "vendor/content";
 @import "vendor/form-custom";
