--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -6,7 +6,7 @@
 @import "vendor/menu-bottom";
 @import "vendor/menu-user";
 @import "vendor/menu-link";
-@import "vendor/test";
+@import "vendor/time-tabel";
 @import "vendor/content";
 @import "vendor/form-custom";
 @import "vendor/data";
