--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -9,5 +9,6 @@
 @import "vendor/time-tabel";
 @import "vendor/content";
 @import "vendor/form-custom";
+@import "notification/notification";
 @import "vendor/data";
 @import "vendor/footer";
