--- a/style/blocks/menu-bottom/__item/menu-bottom__item.scss
+++ b/style/blocks/menu-bottom/__item/menu-bottom__item.scss
@@ -1,7 +1,7 @@
 .menu-bottom__item {
   inline-size: 100%;
   block-size: 100%;
-  max-height: max-content;
+  max-block-size: max-content;
   margin: 0;
   padding: 0;
   border-bottom: 0.25rem solid var(--color-secondary_darker);
