--- a/style/blocks/menu-bottom/__link/menu-bottom__link.scss
+++ b/style/blocks/menu-bottom/__link/menu-bottom__link.scss
@@ -3,7 +3,7 @@
   inline-size: 100%;
   max-inline-size: 100%;
   block-size: 100%;
-  max-height: 100%;
+  max-block-size: 100%;
   text-decoration: none;
   font-weight: bold;
   color: var(--color-primary);
