--- a/style/blocks/menu-bottom/menu-bottom.scss
+++ b/style/blocks/menu-bottom/menu-bottom.scss
@@ -1,17 +1,11 @@
+@import "__circle/menu-bottom__circle";
+@import "__item/menu-bottom__item";
+@import "__link/menu-bottom__link";
+@import "__list/menu-bottom__list";
+
 .menu-bottom {
   background: var(--color-secondary);
   inline-size: 100vw;
   max-inline-size: 100vw;
   block-size: 3.125rem;
-  &__list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    height: 100%;
-    max-height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 3.75rem 1fr 1fr;
-  }
-
 }
