--- a/style/blocks/form-custom/form-custom.scss
+++ b/style/blocks/form-custom/form-custom.scss
@@ -1,3 +1,6 @@
+@import "./__btn/form-custom__btn";
+@import "./__input/form-custom__input.scss";
+@import "./__message/form-custom__message.scss";
 .form-custom {
   display: flex;
   align-items: center;
