--- a/style/blocks/info-icon/info-icon.scss
+++ b/style/blocks/info-icon/info-icon.scss
@@ -1,3 +1,6 @@
+@import "./__item/info-icon__item";
+@import "./__titel/info-icon__titel.scss";
+
 .info-icon {
   padding-block-start: 0.375rem;
   padding-block-end: 0.375rem;
