change scss structure

--- a/style/style.scss
+++ b/style/style.scss
@@ -1,15 +1,4 @@
 @import "compass";
-@import "vendor/constans-scss";
-@import "vendor/constans";
-@import "vendor/body";
-@import "vendor/header";
-@import "vendor/menu-bottom";
-@import "vendor/menu-user";
-@import "vendor/menu-link";
-@import "vendor/time-tabel";
-@import "vendor/content";
-@import "vendor/form-custom";
-@import "blocks/notification/notification";
-@import "blocks/menu-bottom/menu-bottom";
-@import "vendor/data";
-@import "vendor/footer";
+@import "./variables/variables-color.scss";
+@import "./base/base.scss";
+@import "./blocks/index.scss";
