--- a/style/base/base.scss
+++ b/style/base/base.scss
@@ -1,3 +1,10 @@
+@import "./body/body.scss";
+@import "./main-page/main-page.scss";
+@import "./page-content/page-content.scss";
+@import "./form-custom-container.scss";
+@import "./menu-bottom-container.scss";
+@import "./menu-user-container.scss";
+
 *:focus {
   outline: 0;
   @include box-shadow(
