--- a/style/blocks/index.scss
+++ b/style/blocks/index.scss
@@ -1,4 +1,11 @@
 @import "./form-custom/form-custom.scss";
+@import "./header-box/header-box.scss";
 @import "./info-icon/info-icon.scss";
+@import "./logo/logo.scss";
 @import "./menu-bottom/menu-bottom.scss";
+@import "./menu-link/menu-link.scss";
+@import "./menu-user/menu-user.scss";
 @import "./notification/notification.scss";
+@import "./shadow-box/shadow-box.scss";
+@import "./time-table/time-table.scss";
+@import "./toolbar/toolbar.scss";
