--- a/style/blocks/header-box/header-box.scss
+++ b/style/blocks/header-box/header-box.scss
@@ -1,5 +1,5 @@
-@import "./__back/";
-@import "./__link/";
+@import "./__back/header-box__back.scss";
+@import "./__link/header-box__link.scss";
 
 .header-box {
   z-index: 101;
