--- a/style/blocks/logo/logo.scss
+++ b/style/blocks/logo/logo.scss
@@ -1,5 +1,5 @@
-@import "./__img/";
-@import "./__link/";
+@import "./__img/logo__img.scss";
+@import "./__link/logo__link.scss";
 
 .logo {
   grid-area: logo;
