--- a/style/base/body/body.scss
+++ b/style/base/body/body.scss
@@ -1,5 +1,5 @@
 body {
   color: var(--color-primary_light_75);
-  font-size: var(--body-font-size);
+  font-size: 120%;
   font-family: "Roboto", sans-serif;
 }
