--- a/style/blocks/index.scss
+++ b/style/blocks/index.scss
@@ -1,3 +1,4 @@
+@import "./button-box/button-box.scss";
 @import "./form-custom/form-custom.scss";
 @import "./header-box/header-box.scss";
 @import "./info-icon/info-icon.scss";
