--- a/style/blocks/menu-bottom/__circle/menu-bottom__circle.scss
+++ b/style/blocks/menu-bottom/__circle/menu-bottom__circle.scss
@@ -1,8 +1,8 @@
 .menu-bottom__circle {
   position: absolute;
   border-radius: 50%;
-  inline-size: 5rem;
-  block-size: 5rem;
+  inline-size: 4rem;
+  block-size: 4rem;
   text-decoration: none;
   font-weight: bold;
   font-family: "walrus", sans-serif;
@@ -18,8 +18,8 @@
     0.6rem 0.6rem 0.4rem -0.3rem var(--color-secondary_light_25) inset,
     -0.6rem -0.6rem 0.4rem -0.4rem var(--color-secondary_dark_50) inset
   );
-  margin-block-start: 50%;
-  margin-inline-start: 50%;
+  top: 50%;
+  left: 50%;
   transform: translate3d(-50%, -50%, 0);
   transition: all 0.25s;
   &_active {
