--- a/style/style.scss
+++ b/style/style.scss
@@ -4,3 +4,5 @@
 @import "./variables/variables-color.scss";
 @import "./base/base.scss";
 @import "./blocks/index.scss";
+@import "./container/menu-bottom-container";
+@import "./container/form-custom-container";
