--- a/style/blocks/notification/notification.scss
+++ b/style/blocks/notification/notification.scss
@@ -1,14 +1,7 @@
-.box-notification {
-  position: absolute;
-  margin-block-start: 5rem;
-  margin-inline-start: calc( 50% - 5rem);
-}
 .notification {
-  background-color: var(--color-secondary);
   display: flex;
   align-items: center;
   justify-content: center;
-  inline-size: 10rem;
-  block-size: 5rem;
-  display: none;
+  inline-size: 100%;
+  block-size: 100%;
 }
