--- a/style/style.scss
+++ b/style/style.scss
@@ -6,3 +6,4 @@
 @import "./blocks/index.scss";
 @import "./container/menu-bottom-container";
 @import "./container/form-custom-container";
+@import "./container/notification-container.scss";
