--- a/style/container/notification-container.scss
+++ b/style/container/notification-container.scss
@@ -1,4 +1,5 @@
 .notification-container {
+  display: none;
   position: absolute;
   margin-block-start: 4.5rem;
   margin-inline-start: calc(50% - 5.2rem);
